<?xml version="1.0" encoding="utf-8" ?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:paddingEnd="@dimen/_14sdp">

	<ImageView
		android:id="@id/item_bg"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		app:srcCompat="@drawable/story_fg" />

	<LinearLayout
		android:id="@+id/dialog_item_main"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="horizontal">

		<TextView
			android:id="@id/item_field1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/_5sdp"
			android:fontFamily="@font/roboto_regular"
			android:lines="1"
			android:maxLines="1"
			android:paddingTop="@dimen/_4sdp"
			android:paddingEnd="@dimen/_6sdp"
			android:paddingBottom="@dimen/_4sdp"
			android:singleLine="true"
			android:text="@string/dialog_field1_t"
			android:textColor="#ffffffff"
			android:textSize="@dimen/_9sdp"
			android:visibility="gone"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@id/item_field2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/roboto_regular"
			android:lines="1"
			android:maxLines="1"
			android:paddingTop="@dimen/_4sdp"
			android:paddingEnd="@dimen/_6sdp"
			android:paddingBottom="@dimen/_4sdp"
			android:singleLine="true"
			android:text="@string/dialog_field2_t"
			android:textColor="#ffffffff"
			android:textSize="@dimen/_9sdp"
			android:visibility="gone"
			app:layout_constraintStart_toEndOf="@id/item_field1"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@id/item_field3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/roboto_regular"
			android:lines="1"
			android:maxLines="1"
			android:paddingTop="@dimen/_4sdp"
			android:paddingEnd="@dimen/_6sdp"
			android:paddingBottom="@dimen/_4sdp"
			android:singleLine="true"
			android:text="@string/dialog_field3_t"
			android:textColor="#ffffffff"
			android:textSize="@dimen/_9sdp"
			android:visibility="gone"
			app:layout_constraintStart_toEndOf="@id/item_field2"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@id/item_field4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/roboto_regular"
			android:lines="1"
			android:maxLines="1"
			android:paddingTop="@dimen/_4sdp"
			android:paddingEnd="@dimen/_6sdp"
			android:paddingBottom="@dimen/_4sdp"
			android:singleLine="true"
			android:text="@string/dialog_field4_t"
			android:textColor="#ffffffff"
			android:textSize="@dimen/_9sdp"
			android:visibility="gone"
			app:layout_constraintStart_toEndOf="@id/item_field3"
			app:layout_constraintTop_toTopOf="parent" />
	</LinearLayout>
</FrameLayout>
